--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,7 +5,8 @@
     "noImplicitAny": true,
     "allowSyntheticDefaultImports": true,
     "sourceMap": true,
-    "lib": ["es6", "dom"],
+    "lib": ["es6", "dom", "dom.iterable"],
+    "downlevelIteration": true,
     "module": "es6",
     "target": "es5",
     "jsx": "react",
