--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "oceana-en-overlay",
+  "name": "foursite-en-overlay",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -20,7 +20,7 @@
     "eslint-webpack-plugin": "^3.1.1",
     "fork-ts-checker-webpack-plugin": "^7.2.7",
     "mini-css-extract-plugin": "^2.6.0",
-    "node-sass": "^7.0.1",
+    "sass": "^1.54.1",
     "sass-loader": "^12.6.0",
     "style-loader": "^3.3.1",
     "ts-loader": "^9.2.9",
